[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-infer"
version = "0.1.0"
description = "Metapackage bundling qwen-think and qwen3.6-mtp under a shared namespace"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "ArkaD171717" }]
keywords = ["qwen", "mtp", "speculative-decoding", "thinking", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "qwen-think>=0.1.0",
    "qwen3.6-mtp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[project.urls]
Homepage = "https://github.com/ArkaD171717/Forge-LLM"
Repository = "https://github.com/ArkaD171717/Forge-LLM"
