[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-infer"
version = "0.3.0"
description = "Inference control plane for reasoning-aware open-source models"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "ArkaD171717" }]
keywords = ["qwen", "mtp", "speculative-decoding", "thinking", "inference", "repo-context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "qwen-think>=0.1.0",
    "qwen3.6-mtp>=0.1.0",
    "qwen3-repo>=0.1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
observe = ["forge-observe>=0.1.0"]
cloud = ["forge-infer-cloud>=0.1.0"]
dashboard = ["forge-dashboard>=0.1.0"]
all = [
    "openai>=1.0",
    "forge-observe>=0.1.0",
    "forge-infer-cloud>=0.1.0",
    "forge-dashboard>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "openai>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[project.urls]
Homepage = "https://github.com/ArkaD171717/FORGE-Infer"
Repository = "https://github.com/ArkaD171717/FORGE-Infer"
Documentation = "https://arkad171717.github.io/FORGE-Infer/"
